Fix various titlecase issues

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -32,7 +32,7 @@
 							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Balcony at Basle</a>
 						</li>
 						<li>
-							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: The Bridge over the Rhine</a>
+							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: The Bridge Over the Rhine</a>
 						</li>
 						<li>
 							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Aunt Greenow</a>
@@ -119,7 +119,7 @@
 							<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: <abbr>Mr.</abbr> Vavasor Speaks to His Daughter</a>
 						</li>
 						<li>
-							<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: Passion versus Prudence</a>
+							<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: Passion Versus Prudence</a>
 						</li>
 						<li>
 							<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: John Grey Goes a Second Time to London</a>
@@ -199,7 +199,7 @@
 							<a href="text/chapter-59.xhtml"><span epub:type="z3998:roman">LIX</span>: The Duke of <abbr>St.</abbr> Bungay in Search of a Minister</a>
 						</li>
 						<li>
-							<a href="text/chapter-60.xhtml"><span epub:type="z3998:roman">LX</span>: Alice Vavasor’s Name Gets into the Money Market</a>
+							<a href="text/chapter-60.xhtml"><span epub:type="z3998:roman">LX</span>: Alice Vavasor’s Name Gets Into the Money Market</a>
 						</li>
 						<li>
 							<a href="text/chapter-61.xhtml"><span epub:type="z3998:roman">LXI</span>: The Bills Are Made All Right</a>
@@ -244,7 +244,7 @@
 							<a href="text/chapter-74.xhtml"><span epub:type="z3998:roman">LXXIV</span>: Showing What Happened in the Churchyard</a>
 						</li>
 						<li>
-							<a href="text/chapter-75.xhtml"><span epub:type="z3998:roman">LXXV</span>: Rouge et Noir</a>
+							<a href="text/chapter-75.xhtml"><span epub:type="z3998:roman">LXXV</span>: <span xml:lang="fr">Rouge et Noir</span></a>
 						</li>
 						<li>
 							<a href="text/chapter-76.xhtml"><span epub:type="z3998:roman">LXXVI</span>: The Landlord’s Bill</a>
