--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,7 +25,7 @@
 			and on digital scans from the<br/>
 			<a href="https://archive.org/details/canyouforgiveher00trolrich">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">Mrs. George Swinton (Elizabeth Ebsworth)</i>,<br/>
+			<i epub:type="se:name.visual-art.painting"><abbr>Mrs.</abbr> George Swinton (Elizabeth Ebsworth)</i>,<br/>
 			a painting completed in 1897 by<br/>
 			<a href="https://en.wikipedia.org/wiki/John_Singer_Sargent">John Singer Sargent</a>.<br/>
 			The cover and title pages feature the<br/>
