Add z3998:name-title semantic to some abbreviations

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,7 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: <abbr>Mr.</abbr> Vavasor and His Daughter</a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> Vavasor and His Daughter</a>
 				</li>
 				<li>
 					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Lady Macleod</a>
@@ -35,7 +35,7 @@
 					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Aunt Greenow</a>
 				</li>
 				<li>
-					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: <abbr>Mr.</abbr> Cheesacre</a>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> Cheesacre</a>
 				</li>
 				<li>
 					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Rivals</a>
@@ -47,10 +47,10 @@
 					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: John Grey Goes to London</a>
 				</li>
 				<li>
-					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: <abbr>Mr.</abbr> George Vavasor at Home</a>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> George Vavasor at Home</a>
 				</li>
 				<li>
-					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: <abbr>Mr.</abbr> Grimes Gets His Odd Money</a>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> Grimes Gets His Odd Money</a>
 				</li>
 				<li>
 					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Alice Vavasor Becomes Troubled</a>
@@ -113,7 +113,7 @@
 					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: Monkshade</a>
 				</li>
 				<li>
-					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: <abbr>Mr.</abbr> Vavasor Speaks to His Daughter</a>
+					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> Vavasor Speaks to His Daughter</a>
 				</li>
 				<li>
 					<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: Passion Versus Prudence</a>
@@ -122,16 +122,16 @@
 					<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: John Grey Goes a Second Time to London</a>
 				</li>
 				<li>
-					<a href="text/chapter-37.xhtml"><span epub:type="z3998:roman">XXXVII</span>: <abbr>Mr.</abbr> Tombe’s Advice</a>
+					<a href="text/chapter-37.xhtml"><span epub:type="z3998:roman">XXXVII</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> Tombe’s Advice</a>
 				</li>
 				<li>
 					<a href="text/chapter-38.xhtml"><span epub:type="z3998:roman">XXXVIII</span>: The Inn at Shap</a>
 				</li>
 				<li>
-					<a href="text/chapter-39.xhtml"><span epub:type="z3998:roman">XXXIX</span>: <abbr>Mr.</abbr> Cheesacre’s Hospitality</a>
+					<a href="text/chapter-39.xhtml"><span epub:type="z3998:roman">XXXIX</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> Cheesacre’s Hospitality</a>
 				</li>
 				<li>
-					<a href="text/chapter-40.xhtml"><span epub:type="z3998:roman">XL</span>: <abbr>Mrs.</abbr> Greenow’s Little Dinner in the Close</a>
+					<a href="text/chapter-40.xhtml"><span epub:type="z3998:roman">XL</span>: <abbr epub:type="z3998:name-title">Mrs.</abbr> Greenow’s Little Dinner in the Close</a>
 				</li>
 				<li>
 					<a href="text/chapter-41.xhtml"><span epub:type="z3998:roman">XLI</span>: A Noble Lord Dies</a>
@@ -140,7 +140,7 @@
 					<a href="text/chapter-42.xhtml"><span epub:type="z3998:roman">XLII</span>: Parliament Meets</a>
 				</li>
 				<li>
-					<a href="text/chapter-43.xhtml"><span epub:type="z3998:roman">XLIII</span>: <abbr>Mrs.</abbr> Marsham</a>
+					<a href="text/chapter-43.xhtml"><span epub:type="z3998:roman">XLIII</span>: <abbr epub:type="z3998:name-title">Mrs.</abbr> Marsham</a>
 				</li>
 				<li>
 					<a href="text/chapter-44.xhtml"><span epub:type="z3998:roman">XLIV</span>: The Election for the Chelsea Districts</a>
@@ -152,7 +152,7 @@
 					<a href="text/chapter-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: A Love Gift</a>
 				</li>
 				<li>
-					<a href="text/chapter-47.xhtml"><span epub:type="z3998:roman">XLVII</span>: <abbr>Mr.</abbr> Cheesacre’s Disappointment</a>
+					<a href="text/chapter-47.xhtml"><span epub:type="z3998:roman">XLVII</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> Cheesacre’s Disappointment</a>
 				</li>
 				<li>
 					<a href="text/chapter-48.xhtml"><span epub:type="z3998:roman">XLVIII</span>: Preparations for Lady Monk’s Party</a>
@@ -200,7 +200,7 @@
 					<a href="text/chapter-62.xhtml"><span epub:type="z3998:roman">LXII</span>: Going Abroad</a>
 				</li>
 				<li>
-					<a href="text/chapter-63.xhtml"><span epub:type="z3998:roman">LXIII</span>: <abbr>Mr.</abbr> John Grey in Queen Anne Street</a>
+					<a href="text/chapter-63.xhtml"><span epub:type="z3998:roman">LXIII</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> John Grey in Queen Anne Street</a>
 				</li>
 				<li>
 					<a href="text/chapter-64.xhtml"><span epub:type="z3998:roman">LXIV</span>: The Rocks and Valleys</a>
@@ -245,7 +245,7 @@
 					<a href="text/chapter-77.xhtml"><span epub:type="z3998:roman">LXXVII</span>: The Travellers Return Home</a>
 				</li>
 				<li>
-					<a href="text/chapter-78.xhtml"><span epub:type="z3998:roman">LXXVIII</span>: <abbr>Mr.</abbr> Cheesacre’s Fate</a>
+					<a href="text/chapter-78.xhtml"><span epub:type="z3998:roman">LXXVIII</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> Cheesacre’s Fate</a>
 				</li>
 				<li>
 					<a href="text/chapter-79.xhtml"><span epub:type="z3998:roman">LXXIX</span>: Diamonds Are Diamonds</a>
