Correct endnotes header

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="backmatter">
 		<section id="endnotes" epub:type="endnotes">
-			<h2 epub:type="title">Endnote</h2>
+			<h2 epub:type="title">Endnotes</h2>
 			<ol>
 				<li id="note-1" epub:type="endnote">
 					<p>Ah, my friend, from whom I have borrowed this scion of the nobility! Had he been left with us he would have forgiven me my little theft, and now that he has gone I will not change the name. <a href="chapter-16.xhtml#noteref-1" epub:type="backlink">↩</a></p>
