--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -254,7 +254,7 @@
 					<a href="text/chapter-80.xhtml"><span epub:type="z3998:roman">LXXX</span>: The Story Is Finished Within the Halls of the Duke of Omnium</a>
 				</li>
 				<li>
-					<a href="text/endnotes.xhtml">Endnote</a>
+					<a href="text/endnotes.xhtml">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
